<resources>
    <string name="app_name">Parkify  App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_as_user">Log in as user</string>
    <string name="login_as_owner">Log in as owner</string>
    <string name="logout">Logout</string>
    <string name="title_activity_info">InfoActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_reservations">Reservations</string>
    <string name="menu_profiles">Profiles</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="home_recycler_row_button_occupy">Occupy</string>
    <string name="home_recycler_row_button_cancel">Cancel</string>
    <string name="home_recycler_row_button_extend">Extend</string>
    <string name="hone_recycler_row_reservation_other"></string>
    <string name="home_recycler_row_reservation_time" />
    <string name="home_recycler_row_reservation_lane" />
    <string name="home_recycler_row_reservation_address" />
    <string name="home_recycler_row_reservation_status" />
    <string name="home_recycler_row_button_end">End</string>

    <string name="extend_reservation_msg">Extend reservation by 15 minutes?</string>
    <string name="occupy_reservation_msg">Confirm that you are parked in correct place</string>
    <string name="cancel_reservation_msg">Are you sure you want to cancel the reservation?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="cannot_extend_reservation">Cannot extend reservation</string>
    <string name="cannot_change_reservation_status">Cannot change reservation status</string>
</resources>